# libAFIS

./: .gitignore  ABOUT-THIS-FORK.md  Build  CONTRIBUTING.md  COPYING  LICENSE.md  LibAFIS.sdf  LibAFIS.sln  Makefile.am  README.md  acinclude.m4  configure.ac  index.html  params.json
Demo/: PotentialDemo.txt
Sources/: .gitignore  LibAFIS.vcxproj  LibAFIS.vcxproj.filters  Makefile  Makefile.am  TestRunner_Calc.c  Test_Calc.c  makefile  no-makefile
Sources/Extraction/: Extract.c  Extract.h  Makefile.am  SOURCES
Sources/Extraction/Binarisaion/: readme.md
Sources/Extraction/Detection/: readme.md
Sources/Extraction/Enhancement/: readme.md
Sources/Extraction/Filters/: .gitignore  AbsoluteContrast.c  AbsoluteContrast.h  ClippedContrast.c  ClippedContrast.h  CrossRemover.c  CrossRemover.h  Equalizer.c  Equalizer.h  HillOrientation.c  HillOrientation.h  ImageInverter.c  ImageInverter.h  InnerMask.c  InnerMask.h  LinesByOrientation.c  LinesByOrientation.h  LocalHistogram.c  LocalHistogram.h  Makefile.am  OrientedSmoother.c  OrientedSmoother.h  RelativeContrast.c  RelativeContrast.h  SOURCES  SegmentationMask.c  SegmentationMask.h  Thinner.c  Thinner.h  ThresholdBinarizer.c  ThresholdBinarizer.h  VotingFilter.c  VotingFilter.h  readme.md
Sources/Extraction/MinutiaeDetection/: Makefile.am  MinutiaeDetection.c  MinutiaeDetection.h  SOURCES
Sources/Extraction/Model/: DotRemover.c  DotRemover.h  Makefile.am  Minutia.c  Minutia.h  Ridge.c  Ridge.h  SOURCES  SkeletonBuilder.c  SkeletonBuilder.h  SkeletonBuilderRidge.c  SkeletonBuilderRidge.h
Sources/Extraction/Orientation/: readme.md
Sources/Extraction/Ridge Tracing/: readme.md
Sources/Extraction/Segmentation/: readme.md
Sources/General/: Angle.c  Angle.h  Array.c  Array.h  BinaryMap.c  BinaryMap.h  BlockMap.c  BlockMap.h  Calc.c  Calc.h  List.c  List.h  Makefile.am  Neighborhood.h  Point.c  Point.h  PointF.c  PointF.h  PolarPoint.c  PolarPoint.h  PriorityQueue.c  PriorityQueue.h  Range.c  Range.h  RectangleC.c  RectangleC.h  SOURCES  Size.c  Size.h  SizeF.c  SizeF.h  pgm.c  pgm.h
Sources/Matcher/: BestMatchSkipper.c  BestMatchSkipper.h  EdgeShape.c  EdgeShape.h  FingerprintMatcher.c  FingerprintMatcher.h  FingerprintMinutia.h  FingerprintMinutiaType.h  FingerprintTemplate.h  Makefile.am  NeighbourEdge.h  SOURCES  readme.md
Sources/Matcher/Minutia/: .gitignore  EdgeLocation.h  EdgeShape.h  IndexedEdge.h  Makefile.am  MinutiaPair.h  NeighbourEdge.h  PairInfo.c  PairInfo.h  SOURCES
Sources/Templates/: Minutia.h  Template.c  Template.h  TemplateIO.c  TemplateIO.h
Sources/Tests/: .gitignore  Makefile.am  SOURCES  all_tests.c  extract.c
Sources/Tests/DataStructures/: Makefile.am  SOURCES  TestRunner_DataStructures.c  Test_BlockMap.c  Test_DataStructures.c
Sources/Tests/EndToEnd/: TestRunner_EndToEnd.c  Test_EndToEnd.c
Sources/Tests/Extraction/: .gitignore  Makefile.am  SOURCES
Sources/Tests/Extraction/Filters/: Makefile.am  SOURCES  Test_HillOrientation.c  Test_LinesByOrientation.c  Test_LocalHistogram.c  Test_OrientedSmoother.c  Test_Thinner.c  Test_VotingFilter.c
Sources/Tests/Extraction/Filters/runners/: Makefile.am  SOURCES  TestRunner_HillOrientation.c  TestRunner_LinesByOrientation.c  TestRunner_LocalHistogram.c  TestRunner_OrientedSmoother.c  TestRunner_Thinner.c  TestRunner_VotingFilter.c
Sources/Tests/Extraction/Model/: Makefile.am  SOURCES  Test_DotRemover.c
Sources/Tests/Extraction/Model/runners/: Makefile.am  SOURCES  TestRunner_DotRemover.c
Sources/Tests/General/: Makefile.am  SOURCES  Test_Array.c  Test_BinaryMap.c  Test_Calc.c  Test_Equalizer.c  Test_List.c  Test_MinutiaeDetection.c  Test_Pgm.c  Test_Point.c  Test_PriorityQueue.c
Sources/Tests/General/runners/: Makefile.am  SOURCES  TestRunner_Array.c  TestRunner_BinaryMap.c  TestRunner_Equalizer.c  TestRunner_List.c  TestRunner_MinutiaeDetection.c  TestRunner_Pgm.c  TestRunner_Point.c  TestRunner_PriorityQueue.c
Sources/Tests/Matcher/: Makefile.am  SOURCES  Test_BestMatchSkipper.c
Sources/Tests/Matcher/runners/: .gitignore  Makefile.am  SOURCES  TestRunner_BestMatchSkipper.c
Sources/Tests/Templates/: TestRunner_Templates.c  Test_Templates.c  Test_Templates.c.c
Sources/Utils/: Makefile.am  SOURCES
Sources/Utils/IO/: ArrayIO.c  ArrayIO.h  BinaryMapIO.c  BinaryMapIO.h  BlockMapIO.c  BlockMapIO.h  HistogramIO.c  HistogramIO.h  ImageIO.c  ImageIO.h  Makefile.am  SOURCES  SimpleDataTypesIO.c  SimpleDataTypesIO.h
Sources/Utils/Misc/: Makefile.am  SOURCES  binarise.c
Sources/Utils/Unity/: .gitignore  Makefile.am  SOURCES
Test Images/Person 1/: Bas1440999265-Hamster-0-1.png.pgm  Bas1440999265-Hamster-0-2.png.pgm  Bas1440999265-Hamster-1-0.png.pgm  Bas1440999265-Hamster-1-2.png.pgm
TestData/: README.md
TestData/Manually extracted minutiae/: Template_Example.xlsx
TestData/Manually extracted minutiae/Crease/: Jul1440933643-Hamster-1-1.xls
TestData/Manually extracted minutiae/Normal/: Ale1439794734-Hamster0-1.fmr  Ale1439794734-Hamster1-1.fmr  Ale1439794734-Hamster1-2.fmr  Ale1439794734-Hamster2-0.fmr  Template_Ale1439794734-Hamster-0-1.xlsx  Template_Ale1439794734-Hamster-1-1.xlsx  Template_Ale1439794734-Hamster-2-0.xlsx  Template_Ale1439794734-Hamster-3-2.xlsx
TestData/Manually extracted minutiae/Worn/: Template_Ale1439795470-Hamster-1-3.xlsx
TestData/Minutiae test program/: MinutiaeTestApp.sln
TestData/Minutiae test program/MinutiaeTestApp/: MinutiaeTestApp.csproj  Program.cs
TestData/Perfect minutiae/Normal fingers/: Ale1439794734-Hamster-1-1.xlsx  (+6 more)
TestImages/Person1/: Bas1440999265-Hamster-0-0.png.pgm  Bas1440999265-Hamster-0-0.png.pgm.template  Bas1440999265-Hamster-0-1.png.pgm.template  Bas1440999265-Hamster-0-2.png.pgm.template  Bas1440999265-Hamster-1-0.png.pgm.template  Bas1440999265-Hamster-1-1.png.pgm  Bas1440999265-Hamster-1-1.png.pgm.template  Bas1440999265-Hamster-1-2.png.pgm.template
boot/: .gitignore  Build  Makefile.am  configure.ac
logo/: libAFIS logo_black.ai  libAFIS logo_blue.ai
tools/ac/: .gitattributes  ac_check_config_shell.m4  ac_config_init.m4  ac_subst_basedir.m4
tools/am/: compat-1.13
(+9 files in other folders)
