# -*- makefile-automake -*-
#
# Build library
#
# $Id$
#
# Blame: Jordan Hrycaj <jordan@teddy-net.com>

# ---------------------------------------------------------------------------
# Target
# ---------------------------------------------------------------------------

lib_LTLIBRARIES = libgeneral.la

# ---------------------------------------------------------------------------
# Config/settings
# ---------------------------------------------------------------------------

libgeneral_la_CFLAGS = -I$(SOURCES_DIR)

# ---------------------------------------------------------------------------
# Sources
# ---------------------------------------------------------------------------

libgeneral_la_SOURCES  = Angle.c BinaryMap.c Calc.c pgm.c PointF.c
libgeneral_la_SOURCES += Range.c Size.c Array.c BlockMap.c List.c
libgeneral_la_SOURCES += Point.c PolarPoint.c RectangleC.c SizeF.c

# ---------------------------------------------------------------------------
# End
# ---------------------------------------------------------------------------
