# -*- makefile-automake -*-
#
# Build library
#
# $Id$
#
# Blame: Jordan Hrycaj <jordan@teddy-net.com>

SUBDIRS = Minutia

# ---------------------------------------------------------------------------
# Target
# ---------------------------------------------------------------------------

lib_LTLIBRARIES = libmatcher.la

# ---------------------------------------------------------------------------
# Config/settings
# ---------------------------------------------------------------------------

libmatcher_la_CFLAGS = -I$(SOURCES_DIR)
libmatcher_la_LIBADD = Minutia/libminutia.la

# ---------------------------------------------------------------------------
# Sources
# ---------------------------------------------------------------------------

libmatcher_la_SOURCES  = BestMatchSkipper.c

# ---------------------------------------------------------------------------
# End
# ---------------------------------------------------------------------------
