# -*- makefile-automake -*-
#
# Build library
#
# $Id$
#
# Blame: Jordan Hrycaj <jordan@teddy-net.com>

# ---------------------------------------------------------------------------
# Target
# ---------------------------------------------------------------------------

lib_LTLIBRARIES = libmatcher.la

# ---------------------------------------------------------------------------
# Config/settings
# ---------------------------------------------------------------------------

libmatcher_la_CFLAGS = -I$(SOURCES_DIR)

# ---------------------------------------------------------------------------
# Sources
# ---------------------------------------------------------------------------

libmatcher_la_SOURCES  = Minutia/PairInfo.c

libmatcher_la_SOURCES += BestMatchSkipper.c

# ---------------------------------------------------------------------------
# End
# ---------------------------------------------------------------------------
