# -*- makefile-automake -*-
#
# Build library
#
# $Id$
#
# Blame: Jordan Hrycaj <jordan@teddy-net.com>

SUBDIRS= IO Misc Unity

# ---------------------------------------------------------------------------
# Target
# ---------------------------------------------------------------------------

lib_LTLIBRARIES = libutils.la

# ---------------------------------------------------------------------------
# Config/settings
# ---------------------------------------------------------------------------

libutils_la_CFLAGS = -I$(SOURCES_DIR)
libutils_la_LIBADD = IO/libio.la Misc/libmisc.la Unity/libunity.la

# ---------------------------------------------------------------------------
# Sources
# ---------------------------------------------------------------------------

libutils_la_SOURCES =

# ---------------------------------------------------------------------------
# End
# ---------------------------------------------------------------------------
