# -*- makefile-automake -*-
#
# Build library
#
# $Id$
#
# Blame: Jordan Hrycaj <jordan@teddy-net.com>

# ---------------------------------------------------------------------------
# Target
# ---------------------------------------------------------------------------

lib_LTLIBRARIES = libminutiaedetection.la

# ---------------------------------------------------------------------------
# Config/settings
# ---------------------------------------------------------------------------

libminutiaedetection_la_CFLAGS = -I$(SOURCES_DIR)

# ---------------------------------------------------------------------------
# Sources
# ---------------------------------------------------------------------------

libminutiaedetection_la_SOURCES  = MinutiaeDetection.c

# ---------------------------------------------------------------------------
# End
# ---------------------------------------------------------------------------
