# -*- makefile-automake -*-
#
# Build library
#
# $Id$
#
# Blame: Jordan Hrycaj <jordan@teddy-net.com>

# ---------------------------------------------------------------------------
# Target
# ---------------------------------------------------------------------------

lib_LTLIBRARIES = libmodel.la

# ---------------------------------------------------------------------------
# Config/settings
# ---------------------------------------------------------------------------

libmodel_la_CFLAGS = -I$(SOURCES_DIR)

# ---------------------------------------------------------------------------
# Sources
# ---------------------------------------------------------------------------

libmodel_la_SOURCES  = DotRemover.c Minutia.c Ridge.c SkeletonBuilder.c

# ---------------------------------------------------------------------------
# End
# ---------------------------------------------------------------------------
