# -*- makefile-automake -*-
#
# Build library
#
# $Id$
#
# Blame: Jordan Hrycaj <jordan@teddy-net.com>

# ---------------------------------------------------------------------------
# Target
# ---------------------------------------------------------------------------

lib_LTLIBRARIES = libminutia.la

# ---------------------------------------------------------------------------
# Config/settings
# ---------------------------------------------------------------------------

libminutia_la_CFLAGS = -I$(SOURCES_DIR)

# ---------------------------------------------------------------------------
# Sources
# ---------------------------------------------------------------------------

libminutia_la_SOURCES  = PairInfo.c

# ---------------------------------------------------------------------------
# End
# ---------------------------------------------------------------------------
