# -*- makefile-automake -*-
#
# Build library
#
# $Id$
#
# Blame: Jordan Hrycaj <jordan@teddy-net.com>

# ---------------------------------------------------------------------------
# Target
# ---------------------------------------------------------------------------

lib_LTLIBRARIES = libdatastructures.la

# ---------------------------------------------------------------------------
# Config/settings
# ---------------------------------------------------------------------------

libdatastructures_la_CFLAGS  = -I$(SOURCES_DIR) -I$(SOURCES_DIR)/Utils/Unity
libdatastructures_la_CFLAGS += -I$(SOURCES_DIR)/Utils/Unity

# ---------------------------------------------------------------------------
# Sources
# ---------------------------------------------------------------------------

libdatastructures_la_SOURCES  = Test_DataStructures.c
libdatastructures_la_SOURCES += TestRunner_DataStructures.c

# ---------------------------------------------------------------------------
# End
# ---------------------------------------------------------------------------
