# -*- makefile-automake -*-
#
# Build library
#
# $Id$
#
# Blame: Jordan Hrycaj <jordan@teddy-net.com>

# ---------------------------------------------------------------------------
# Target
# ---------------------------------------------------------------------------

lib_LTLIBRARIES = libmatcher.la

# ---------------------------------------------------------------------------
# Config/settings
# ---------------------------------------------------------------------------

libmatcher_la_CFLAGS = -I$(SOURCES_DIR) -I$(SOURCES_DIR)/Utils/Unity

# ---------------------------------------------------------------------------
# Sources
# ---------------------------------------------------------------------------

libmatcher_la_SOURCES  = runners/TestRunner_BestMatchSkipper.c
libmatcher_la_SOURCES += Test_BestMatchSkipper.c

# ---------------------------------------------------------------------------
# End
# ---------------------------------------------------------------------------
