# -*- makefile-automake -*-
#
# Build library
#
# $Id$
#
# Blame: Jordan Hrycaj <jordan@teddy-net.com>

# ---------------------------------------------------------------------------
# Target
# ---------------------------------------------------------------------------

lib_LTLIBRARIES = libio.la

# ---------------------------------------------------------------------------
# Config/settings
# ---------------------------------------------------------------------------

libio_la_CFLAGS = -I$(SOURCES_DIR)

# ---------------------------------------------------------------------------
# Sources
# ---------------------------------------------------------------------------

libio_la_SOURCES  = ArrayIO.c BinaryMapIO.c BlockMapIO.c HistogramIO.c
libio_la_SOURCES += ImageIO.c SimpleDataTypesIO.c

# ---------------------------------------------------------------------------
# End
# ---------------------------------------------------------------------------
