# -*- makefile-automake -*-
#
# Build library
#
# $Id$
#
# Blame: Jordan Hrycaj <jordan@teddy-net.com>

# ---------------------------------------------------------------------------
# Target
# ---------------------------------------------------------------------------

lib_LTLIBRARIES = libmisc.la

# ---------------------------------------------------------------------------
# Config/settings
# ---------------------------------------------------------------------------

libmisc_la_CFLAGS = -I$(SOURCES_DIR)

# ---------------------------------------------------------------------------
# Sources
# ---------------------------------------------------------------------------

libmisc_la_SOURCES = binarise.c

# ---------------------------------------------------------------------------
# End
# ---------------------------------------------------------------------------
