# -*- makefile-automake -*-
#
# Build library
#
# $Id$
#
# Blame: Jordan Hrycaj <jordan@teddy-net.com>

# ---------------------------------------------------------------------------
# Target
# ---------------------------------------------------------------------------

lib_LTLIBRARIES = libunity.la

# ---------------------------------------------------------------------------
# Config/settings
# ---------------------------------------------------------------------------

libunity_la_CFLAGS = -I$(SOURCES_DIR)

# ---------------------------------------------------------------------------
# Sources
# ---------------------------------------------------------------------------

libunity_la_SOURCES = unity.c unity_fixture.c

# ---------------------------------------------------------------------------
# End
# ---------------------------------------------------------------------------
